--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,6 +2,7 @@
 	box-shadow: 0px 5px 12px #f0f2f77c;
 	position: relative;
 	font-size: 15px;
+	overflow: hidden;
 }
 
 .inner-nav {
@@ -50,40 +51,11 @@
 	font-weight: bold;
 }
 
-@media (max-width: 768px) {
-	.inner-nav {
-		width: 20%;
-	}
-
-	.navbarText {
-		display: none !important;
-	}
-
-	.brand {
-		width: 40px;
-	}
-
-	.brand-logo {
-		width: 68px;
-	}
-
-	.profile-right {
-		display: none;
-	}
-
-	.connect-wallet-btn {
-		max-height: 50px;
-
-		/* padding-left: 1rem;
-		padding-right: 1rem; */
-		font-size: 10px;
-	}
-}
-
 .navbar-nav > li {
 	float: left;
 	position: relative;
 }
+
 .navbar-light .navbar-nav .active a::after {
 	border-bottom: 5px solid #df642b;
 	bottom: -28px;
@@ -113,4 +85,72 @@
 	padding-right: 2rem;
 	color: white;
 	font-weight: bold;
+}
+
+.nav-slider-container {
+	min-width: 100%;
+	overflow-y: auto;
+}
+
+.slider-slide {
+	min-width: fit-content;
+}
+
+.navbar-slider {
+	font-size: 12px;
+	font-weight: bold;
+	color: #1d2943;
+	text-decoration: none;
+}
+
+.navbar-slider:hover {
+	text-decoration: none;
+	color: #1d2943;
+}
+
+.navbar-slider-active {
+	font-size: 12px;
+	font-weight: bold;
+	color: #1d2943;
+	text-decoration: none;
+	padding-bottom: 0.8rem;
+	border-bottom: 5px solid #df642b;
+}
+
+.topbar-navigator-mobile {
+	display: none;
+}
+
+@media (max-width: 768px) {
+	.inner-nav {
+		width: 20%;
+	}
+
+	.navbarText {
+		display: none !important;
+	}
+
+	.brand {
+		width: 40px;
+	}
+
+	.brand-logo {
+		width: 68px;
+	}
+
+	.profile-right {
+		display: none;
+	}
+
+	.connect-wallet-btn {
+		max-height: 50px;
+
+		/* padding-left: 1rem;
+		padding-right: 1rem; */
+		font-size: 10px;
+	}
+
+	.topbar-navigator-mobile {
+		display: block;
+	}
 }
