--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,3 @@
-.sidebar-container {
-	z-index: 5;
-}
-
 .balanceStyle {
 	color: #8e94a1;
 	font-size: 14px;
@@ -107,9 +103,8 @@
 		border-radius: 0px;
 		padding-left: 1.5rem;
 		padding-right: 2rem;
-		padding-top: 3rem;
+		padding-top: 1rem;
 		padding-bottom: 3rem;
-		/* height: 100vh; */
 	}
 
 	.addWallet {
@@ -149,16 +144,17 @@
 .sidebar-open-mobile {
 	animation-name: open-sidebar-mobile;
 	animation-duration: 1s;
-
+	bottom: 0;
 	animation-fill-mode: forwards;
 	overflow: hidden;
 	position: absolute;
-	top: -82px;
+	top: -120px;
 }
 
 .sidebar-close-mobile {
 	position: absolute;
-	top: -82px;
+	top: -120px;
+	bottom: 0;
 
 	animation-name: close-sidebar-mobile;
 	animation-duration: 1s;
@@ -178,10 +174,28 @@
 	font-size: 10px;
 }
 
-.close-box {
+@keyframes close-box-open {
+	from {
+		right: 150%;
+	}
+	to {
+		right: 5%;
+	}
+}
+
+@keyframes close-box-close {
+	from {
+		right: 5%;
+	}
+	to {
+		right: 150%;
+	}
+}
+
+.close-box-open {
 	z-index: 9;
-	top: -25px;
-	right: 10px;
+	top: -98px;
+	right: 5%;
 	position: absolute;
 	background: #f8fafd 0% 0% no-repeat padding-box;
 	border-radius: 5px;
@@ -189,4 +203,27 @@
 	padding: 7px;
 	padding-left: 12px;
 	padding-right: 12px;
+
+	animation-name: close-box-open;
+	animation-duration: 1s;
+
+	animation-fill-mode: forwards;
+}
+
+.close-box-close {
+	z-index: 9;
+	top: -98px;
+	right: 5%;
+	position: absolute;
+	background: #f8fafd 0% 0% no-repeat padding-box;
+	border-radius: 5px;
+	width: fit-content;
+	padding: 7px;
+	padding-left: 12px;
+	padding-right: 12px;
+
+	animation-name: close-box-close;
+	animation-duration: 1s;
+
+	animation-fill-mode: forwards;
 }
