--- a/src/components/Graph/Graph.css
+++ b/src/components/Graph/Graph.css
@@ -11,4 +11,30 @@
 	font-size: 12px;
 	margin-bottom: 2rem;
 	margin-left: 1rem;
+	color: #000000;
+}
+
+.graphContainerMobile {
+	display: none;
+}
+
+@media (max-width: 768px) {
+	.graphContainerMobile {
+		display: block;
+		background-color: white;
+		border-radius: 12px;
+		padding-top: 1.5rem;
+		padding-bottom: 0.5rem;
+		padding-right: 1rem;
+		margin-left: -0.5rem;
+	}
+	.graphContainer {
+		display: none;
+	}
+	.price {
+		font-size: 12px;
+		margin-bottom: 1rem;
+		margin-left: 1rem;
+		color: #000000;
+	}
 }
