--- a/src/components/YieldFarming/styles.css
+++ b/src/components/YieldFarming/styles.css
@@ -67,3 +67,13 @@
 	transform: scale(0.85);
 	margin-right: 4px;
 }
+
+@media (max-width: 768px) {
+	.yield-farming-container {
+		padding-right: 0;
+	}
+
+	.yield-farming-container .breadcrums-container .breadcrum {
+		font-size: 9px;
+	}
+}
