--- a/src/components/Dashboard/Send/styles.css
+++ b/src/components/Dashboard/Send/styles.css
@@ -117,7 +117,7 @@
 	}
 
 	.send-input-container > span {
-		top: 45px;
+		top: 40px;
 		font-size: 11px;
 	}
 
@@ -127,6 +127,7 @@
 		padding-left: 10px;
 		padding-right: 10px;
 		font-size: 11px;
+		height: 46px;
 	}
 
 	.description-label {
