--- a/src/components/Dashboard/Staking/styles.css
+++ b/src/components/Dashboard/Staking/styles.css
@@ -1,5 +1,6 @@
 .staking-container {
 	width: 100%;
+	margin: auto;
 }
 
 .staking-card {
@@ -10,8 +11,8 @@
 	padding-right: 1rem;
 	padding-top: 2rem;
 	padding-bottom: 2rem;
-	margin-right: 1rem;
-	width: 25%;
+	/* margin-right: 5px; */
+	/* width: 25%; */
 }
 
 .top-value {
@@ -43,4 +44,11 @@
 .staking-bottom-right {
 	font-size: 12px;
 	color: black;
+}
+
+@media (max-width: 768px) {
+	.staking-container {
+		width: 90%;
+		margin: auto;
+	}
 }
