--- a/src/components/Cards/Card.css
+++ b/src/components/Cards/Card.css
@@ -202,6 +202,16 @@
 	font-weight: bold;
 }
 
+.no-wallet {
+	color: white;
+	font-size: 20px;
+	margin-top: 1.5rem;
+}
+
+.no-wallet > span {
+	font-weight: bold;
+}
+
 .wallet-exchange-logo {
 	width: 156.1px;
 }
@@ -364,5 +374,80 @@
 		font-size: 8px;
 		margin-left: 0.1rem;
 		margin-right: 0.1rem;
+	}
+
+	.wallet-exchange-container {
+		width: 90%;
+		height: fit-content;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.cards-container {
+		flex-direction: column;
+		justify-content: center;
+		margin: auto;
+		width: 90%;
+		margin-top: 2rem;
+		height: 100%;
+	}
+
+	.wallet-exchange-card {
+		width: 100%;
+		height: 255px;
+		padding: 1rem;
+		margin-bottom: 1.5rem;
+	}
+
+	.wallet-exchange-head {
+		font-size: 20px;
+	}
+
+	.be-your-own {
+		font-size: 16px;
+	}
+
+	.wallet-exchange-card > p {
+		font-size: 12px;
+		margin-top: 0.5rem;
+	}
+
+	.btn-orange {
+		font-size: 13px;
+		height: 46px;
+		margin-top: 0;
+	}
+
+	.wallet-exchange-logo {
+		width: 82px;
+	}
+
+	.buy-sell-store {
+		font-size: 17px;
+		margin-top: 2rem;
+	}
+
+	.get-started {
+		font-size: 13px;
+		margin-top: 1rem;
+	}
+
+	.no-wallet {
+		display: none;
+	}
+
+	.card-container {
+		background: transparent linear-gradient(90deg, #1d2943 0%, #1d2639 100%)
+			0% 0% no-repeat padding-box;
+		width: 100vw;
+		height: fit-content;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		padding-top: 5rem;
+		padding-bottom: 7rem;
 	}
 }
