wallet, address edit and delete responsive

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -20,3 +20,13 @@
 		z-index: 2;
 	}
 }
+.modal-back{
+	top: 0px;
+	left: 0px;
+	width: 100vw;
+	height: 100vh;
+	background: #000000 0% 0% no-repeat padding-box;
+	opacity: 0.75;
+	position: fixed;
+	z-index: 2;
+}
