--- a/src/components/Dashboard/Swap/styles.css
+++ b/src/components/Dashboard/Swap/styles.css
@@ -48,7 +48,7 @@
 
 .center-button {
 	width: 56px;
-	height: 56px;
+	height: 56px;	
 	background: #FAFBFE 0% 0% no-repeat padding-box;
 	border: 1px solid #DBDBDB;
 	opacity: 1;
@@ -103,7 +103,6 @@ span.lft-margin{
 
 .block {
 	width: 100%;
-	height: 153px;
 	border-radius: 25px;
 	opacity: 1;
 }
@@ -145,7 +144,25 @@ span.lft-margin{
 	opacity: 0.59;
 }
 
-@media (min-width: 1500px) {
+.spinner-button{
+	position: relative;
+	margin-left: 12px;
+	color: #526DAA;
+}
+.spinner-up{
+	height: 40%;
+	position: absolute;
+	display: block;
+	top: -3px;
+}
+.spinner-down{
+	height: 40%;
+	position: absolute;
+	display: block;
+	bottom: -1px;
+}
+
+@media (min-width: 1280px) {
 	.block-container{
 		width: 429px;
 	}
@@ -157,19 +174,79 @@ span.lft-margin{
 	}
 }
 
-@media (max-width: 1500px){
+@media (max-width: 1280px){
 	.info span{
 		display: block;
 		width: max-content;
 		padding-left: 0;
 	}
 	.inner-container{
-		padding: 24px 22px;
+		padding: 15px 12px;
 	}
 	.flex-container{
 		width: 100%;
 	}
 	.web-bottom-info{
 		display: none;
+	}
+}
+
+@media (max-width: 768px){
+	.center-button{
+		margin-top: 80px;
+	}
+	.header-text{
+		font-size: 14px;
+	}
+	.info span{
+		font-size: 10px;
+	}
+	.container-img{
+		width: 13px;
+		height: 21px;
+	}
+	.inner-title{
+		font-size: 15px;
+	}
+	.block{
+		border-radius: 19px;
+	}
+	.right-side-btn{
+		width: 15px;
+		height: 15px;
+		border-radius: 5px;
+		position: relative;
+	}
+	.right-side-btn i{
+		font-size: 10px;
+		width: 5px;
+		height: 4px;
+		top: 3.5px;
+		left: 4.5px;
+		margin: auto;
+		position: absolute;
+		display: block;
+	}
+	.info{
+		font-size: 12px;
+	}
+	.center-button{
+		width: 22px;
+		height: 22px;
+		font-size: 7px;
+		line-height: 21px;
+		text-align: center;
+		letter-spacing: 2px;
+		padding-left: 2px;
+	}
+	.bottom-header{
+		font-size: 14px;
+	}
+	.bottom-text{
+		font-size: 12px;
+		padding: 14.5px 19.5px;
+	}
+	span.lft-margin{
+		margin-left: 6px;
 	}
 }
