--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -9,7 +9,7 @@
     position: fixed;
     left: calc(50vw - 267px);
     z-index: 2;
-    padding: 34px 42px 42px 36px;
+    padding: 34px 0px 42px 0px;
 }
 .edit-container {
     width: 987px;
@@ -21,11 +21,10 @@
     position: fixed;
     left: calc(50vw - 493px);
     z-index: 2; 
-    padding: 34px 42px 42px 36px;
+    padding: 34px 0px 42px 0px;
 }
 .delete-container {
     width: 682px;
-    height: 327px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 5px 30px #FFFFFF4A;
     border-radius: 12px;
@@ -35,6 +34,41 @@
     z-index: 2;
     padding: 90px 70px 45px 70px;
     text-align: center;
+}
+
+@media screen and (max-width: 992px) {
+    .walllet-container .edit-container{
+      width: 500px;
+      left: calc(50vw - 200px);
+      top:10%;
+    }
+    .edit-container{
+        width: 600px;
+        left: calc(50vw - 300px);
+    }
+    .delete-container{
+        width: 500px;
+        left: calc(50vw - 250px);
+    }
+  }
+@media screen and (max-width: 600px) {
+    .walllet-container{
+        width: 350px;
+        left: calc(50vw - 175px);
+        top:7%;
+    }
+    .edit-container{
+        width: 400px;
+        left: calc(50vw - 200px);
+    }
+    .delete-container{
+        width: 400px;
+        left: calc(50vw - 200px);
+    }
+}
+.wallet-header{
+    margin-left: 36px;
+    margin-right: 36px;
 }
 .wallet-heading{
     width: 178px;
@@ -59,22 +93,24 @@
     opacity: 0.6;
 }
 .delete-button{
-    width: 255px;
+    /* width: 255px; */
     height: 63px;
     background: #DF642B 0% 0% no-repeat padding-box;
     border-radius: 12px;
     opacity: 1;
     color:white;
-    float: right;
+    /* float: right; */
+    margin: 10px;
     border: none;
 }
 .cancel-button{
-    width: 255px;
+    /* width: 255px; */
     height: 63px;
     background: #E0E0E0 0% 0% no-repeat padding-box;
     border-radius: 12px;
     opacity: 1;
-    float: left;
+    /* float: left; */
+    margin: 10px;
     border: none;
 }
 .wallet-quit{   
@@ -94,20 +130,13 @@
     opacity: 1;
 }
 .head-line{
-    width:535px;
+    width:100%;
     position: relative;
-    margin: 60px 30px 30px -36px;
+    margin: 60px 0px 30px 0px;
     border-bottom: 2px solid #f3f3f3;
-}
-.edit-head-line{
-    border-bottom: 2px solid #f3f3f3;
-    width: 987px;
-    height: 1px;
-    position: relative;
-    margin: 60px 30px 30px -36px;
 }
 .wallet-search{
-    width: 461px;
+    width: 85%;
     height: 70px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 2px solid #F3F3F3;
@@ -123,7 +152,8 @@
 
 .item-list{
     overflow-y: auto;
-    /* height: 440px; */
+    height: 400px;
+    margin: 10px 36px;
 }
 
 .asset-item{
@@ -137,6 +167,7 @@
     height: 24px;
     opacity: 1;
     margin-right:25px;
+    vertical-align: text-bottom;
 }
 
 .dot{
@@ -152,19 +183,28 @@
     color: #1D2943;
     opacity: 1;
 }
-
+.edit-body{
+    margin: 0px 36px;
+}
+.edit-label{
+    font: normal normal bold 20px/40px Swis721 BT;
+    letter-spacing: 0.4px;
+    color: #1D2943;
+}
 .edit-value{
     padding: 37px 37px 37px 45px;
 }
 
 .save-button{
-    width: 347px;
+    /* width: 347px; */
     height: 63px;
     background: #53A8F0 0% 0% no-repeat padding-box;
     border-radius: 12px;
     opacity: 1;
     color:white;
     border: none;
+    margin-top: 30px;
+    margin-bottom: 45px;
 }
 
 .profile-label{
@@ -172,3 +212,39 @@
     color: black;
 }
 
+.modal-container{
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 2;
+    text-align: center;
+    overflow-y: auto;
+    padding: auto;
+}
+.mt-sm-5{
+    margin-top: 2rem!important;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px lightGrey; 
+    border-radius: 5px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: darkGray; 
+    border-radius: 5px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: Gray; 
+  }
