--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -114,6 +114,7 @@
 	font-weight: bold;
 	margin-right: 1rem;
 	text-align: right;
+	float:right;
 }
 
 .password-row-input {
@@ -137,7 +138,7 @@
 	padding-right: 3rem;
 	height: 55px;
 	border: none;
-	margin-left: 10rem;
+	margin-left: 15rem;
 }
 
 .profile-container {
